--- a/requirements.txt
+++ b/requirements.txt
@@ -1,147 +1,139 @@
-absl-py==2.3.1
+accelerate==1.12.0
+aiofiles==24.1.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
-anyio==4.10.0
-argbind==0.3.9
-asttokens==3.0.0
-audioread==3.0.1
+anyio==4.12.0
+audioread==3.1.0
 blinker==1.9.0
-build==1.3.0
-certifi==2025.8.3
+brotli==1.2.0
+catalogue==2.0.10
+certifi==2026.1.4
 cffi==2.0.0
-charset-normalizer==3.4.3
-click==8.1.8
-colorama==0.4.6
-contourpy==1.3.3
-cycler==0.12.1
-dac==0.4.3
-dacite==1.9.2
+cfgv==3.5.0
+charset-normalizer==3.4.4
+chatterbox-tts==0.1.6
+click==8.3.1
+conformer==0.3.2
 decorator==5.2.1
-descript-audio-codec==1.0.0
-descript-audiotools==0.7.2
-docstring_parser==0.17.0
+Deprecated==1.3.1
+diffusers==0.29.0
+distlib==0.4.0
 dotenv==0.9.9
 einops==0.8.1
-einx==0.3.0
-executing==2.2.1
-ffmpy==0.6.1
-filelock==3.19.1
-fire==0.7.1
+exceptiongroup==1.3.1
+fastapi==0.128.0
+ffmpy==1.0.0
+filelock==3.20.2
 Flask==3.1.2
-flask-cors==6.0.1
-flatten-dict==0.4.2
-fonttools==4.60.0
-frozendict==2.4.6
-fsspec==2025.9.0
+flask-cors==6.0.2
+fsspec==2025.12.0
 future==1.0.0
-grpcio==1.75.0
+gradio==5.44.1
+gradio_client==1.12.1
+groovy==0.1.2
 gunicorn==23.0.0
 h11==0.16.0
-h2==4.3.0
-hf-xet==1.1.10
-hpack==4.1.0
-huggingface-hub==0.35.0
-Hypercorn==0.18.0
-hyperframe==6.1.0
-idna==3.10
-importlib_resources==6.5.2
-ipython==9.5.0
-ipython_pygments_lexers==1.1.1
+hf-xet==1.2.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.36.0
+identify==2.6.15
+idna==3.11
+importlib_metadata==8.7.1
 itsdangerous==2.2.0
-jedi==0.19.2
+jaconv==0.4.1
 Jinja2==3.1.6
-joblib==1.5.2
-julius==0.2.7
-kiwisolver==1.4.9
+joblib==1.5.3
 lazy_loader==0.4
 librosa==0.11.0
-llvmlite==0.45.0
+llvmlite==0.46.0
 loguru==0.7.3
-Markdown==3.9
 markdown-it-py==4.0.0
-markdown2==2.5.4
-MarkupSafe==3.0.2
-matplotlib==3.10.6
-matplotlib-inline==0.1.7
+MarkupSafe==3.0.3
 mdurl==0.1.2
+ml_dtypes==0.5.4
 more-itertools==10.8.0
 mpmath==1.3.0
-msgpack==1.1.1
-networkx==3.5
-numba==0.62.0
-numpy==2.3.3
-nvidia-cublas-cu12==12.8.4.1
-nvidia-cuda-cupti-cu12==12.8.90
-nvidia-cuda-nvrtc-cu12==12.8.93
-nvidia-cuda-runtime-cu12==12.8.90
-nvidia-cudnn-cu12==9.10.2.21
-nvidia-cufft-cu12==11.3.3.83
-nvidia-cufile-cu12==1.13.1.3
-nvidia-curand-cu12==10.3.9.90
-nvidia-cusolver-cu12==11.7.3.90
-nvidia-cusparse-cu12==12.5.8.93
-nvidia-cusparselt-cu12==0.7.1
-nvidia-nccl-cu12==2.27.3
-nvidia-nvjitlink-cu12==12.8.93
-nvidia-nvtx-cu12==12.8.90
+msgpack==1.1.2
+networkx==3.4.2
+nodeenv==1.10.0
+numba==0.63.1
+numpy==1.25.2
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 omegaconf==2.3.0
+onnx==1.20.0
 openai-whisper==20250625
+orjson==3.11.5
 packaging==25.0
-pandas==2.3.2
-parso==0.8.5
-pexpect==4.9.0
+pandas==2.3.3
+peft==0.18.0
 pillow==11.3.0
-platformdirs==4.4.0
+platformdirs==4.5.1
 pooch==1.8.2
-priority==2.0.0
-prompt_toolkit==3.0.52
-protobuf==3.19.6
-ptyprocess==0.7.0
-pure_eval==0.2.3
+pre_commit==4.5.1
+protobuf==6.33.2
+psutil==7.2.1
 pycparser==2.23
+pydantic==2.11.10
+pydantic_core==2.33.2
 pydub==0.25.1
 Pygments==2.19.2
+pykakasi==2.3.0
 pyloudnorm==0.1.1
-pyparsing==3.2.5
-pyproject_hooks==1.2.0
-pystoi==0.4.1
 python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
+python-dotenv==1.2.1
+python-multipart==0.0.21
 pytz==2025.2
-PyYAML==6.0.2
-randomname==0.2.1
-regex==2025.9.18
+PyYAML==6.0.3
+regex==2025.11.3
 requests==2.32.5
-rich==14.1.0
-safetensors==0.6.2
+resemble-perth==1.0.1
+rich==14.2.0
+ruff==0.14.10
+s3tokenizer==0.3.0
+safehttpx==0.1.7
+safetensors==0.5.3
 scikit-learn==1.7.2
-scipy==1.16.2
+scipy==1.15.3
+semantic-version==2.10.0
 shellingham==1.5.4
 six==1.17.0
-sniffio==1.3.1
 soundfile==0.13.1
 soxr==1.0.0
-stack-data==0.6.3
-starlette==0.48.0
-sympy==1.14.0
-tensorboard==2.20.0
-tensorboard-data-server==0.7.2
-termcolor==3.1.0
+spacy_pkuseg==1.0.1
+srsly==2.5.2
+starlette==0.50.0
+sympy==1.13.1
 threadpoolctl==3.6.0
-tiktoken==0.11.0
+tiktoken==0.12.0
 tokenizers==0.20.3
-toml==0.10.2
-torch==2.8.0
-torch-stoi==0.2.3
-torchaudio==2.8.0
+tomlkit==0.13.3
+torch==2.6.0
+torchaudio==2.6.0
 tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.46.1
-triton==3.4.0
-typer==0.15.4
+transformers==4.46.3
+triton==3.2.0
+typer==0.21.0
+typing-inspection==0.4.2
 typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==2.5.0
-vector-quantize-pytorch==1.23.2
-wcwidth==0.2.13
-Werkzeug==3.1.3
-wsproto==1.3.1
+tzdata==2025.3
+urllib3==2.6.2
+uvicorn==0.40.0
+virtualenv==20.35.4
+websockets==15.0.1
+Werkzeug==3.1.4
+wrapt==2.0.1
+zipp==3.23.0
